# rsysmetrics

./: .gitignore  Cargo.toml  GEMINI.md  PKGBUILD  README.md  rsysmetrics.service  rsysmetrics.toml
.github/ISSUE_TEMPLATE/: bug_report.md
contrib/: grafana-dashboard.json
src/: config.rs  main.rs
src/collectors/: cpu.rs  disk.rs  gpu.rs  memory.rs  mod.rs  network.rs  system.rs  temperature.rs
src/collectors/linux/: cpu.rs  disk.rs  gpu.rs  memory.rs  mod.rs
src/exporters/: influxdb.rs
