[package]
name = "rsysmetrics"
version = "0.1.0"
edition = "2024"

[dependencies]
sysinfo = "0.30.12"
tokio = { version = "1", features = ["full"] }
reqwest = "0.12.23"
serde = { version = "1.0", features = ["derive"] }
toml = "0.8.13"
tracing = "0.1"
tracing-subscriber = "0.3"
async-trait = "0.1.80"
regex = "1.10.4"
globset = "0.4.14"
