[package]
name = "rsysmetrics"
version = "0.1.0"
edition = "2024"

[dev-dependencies]
tempfile = "3.3"

[dependencies]
sysinfo = "0.37.0"
tokio = { version = "1", features = ["full"] }
reqwest = "0.12.23"
serde = { version = "1.0", features = ["derive"] }
toml = "0.9.7"
tracing = "0.1"
tracing-subscriber = "0.3"
async-trait = "0.1.80"
regex = "1.11.3"
globset = "0.4.14"
clap = { version = "4.5.48", features = ["derive"] }
